version 1.0-rc2 - XX-Apr-2011
. [NEW] Director: Use small dt when the game is being debugged.
. [NEW] Tests: Added test case for bug 1159
. [FIX] Particles: TTL is always >= 0.
. [FIX] Scheduler: Fixed possible crash when unscheduling a sibling
. [FIX] Templates: Use NS_BLOCK_ASSERTIONS and NDEBUG in Release Mode to remove asserts
. [FIX] Templates: Xcode 3 templates fixed. Removed unused files in cocos2d lib. Added missing files from TouchJSON
. [FIX] Templates: ARMv6 devices uses "none" autorotation to improve speed
. [FIX] Templates: Added Xcode 4 "File" templates both for iOS and Mac OS X
. [FIX] Templates: Uses CFBundleIconFiles in Info.plist instead of "Icon Files" (issue #1151)
. [FIX] Templates: Xcode 4 templates generates "sub groups"
. [FIX] Templates: Xcode 4 Mac templates include CocosDenshion
. [FIX] TextureAtlas: Render "static" VBO batches between 6~10 % faster (issue #1150)
. [FIX-MAC] Templates: Generates by default an RGBA8 color buffer instead of an RGBA16

version 1.0-rc - 29-Mar-2011
. [NEW] Actions: Added the possibility to create a CCSpawn and CCSequence with an NSArray
. [NEW] CCArray: Added exchangeObject & exchangeObjectAtIndex (issue #1085)
. [NEW] Templates: Added Xcode4 templates for cocos2d, cocos2d+box2d, cocos2d+chipmunk both for iOS and Mac OS X
. [NEW] Templates: Possibility to run the installer from any directory
. [NEW] Tests: Added DirectorTest
. [NEW] Tests: Added Texture2d subtest for an unsupported PVR pixel format
. [NEW] TextureAtlas: added possibility to draw the quads in parts
. [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
. [FIX] Actions: Instant, "base" actions, ReverseTime, Spawn and Sequence don't leak memory if actions are reused
. [FIX] ccpLineIntersect: doesn't produce false positives for collisions (issue #962)
. [FIX] Director: convertToUI works OK in RetinaDisplay mode
. [FIX] Documentation: Drawing primitives fixed syntax error (issue #1127)