@@ -1,7 +1,9 @@
 version 1.0-rc2 - XX-Apr-2011
 . [NEW] Director: Use small dt when the game is being debugged.
 . [NEW] Tests: Added test case for bug 1159
+. [NEW] Particles: Added support for ParticleDesigner 1.3.60 (spinning support)
 . [FIX] Particles: TTL is always >= 0.
+. [FIX] Particles: texture coordinates are being used correctly when texture is NPOT.
 . [FIX] Scheduler: Fixed possible crash when unscheduling a sibling
 . [FIX] Templates: Use NS_BLOCK_ASSERTIONS and NDEBUG in Release Mode to remove asserts
 . [FIX] Templates: Xcode 3 templates fixed. Removed unused files in cocos2d lib. Added missing files from TouchJSON
